--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>Flex Test </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,6 +22,8 @@
         <![endif]-->
 
         <section class="wrapper">
+          <header>Header Header Header</header>
+          <main>MainMainMainMainMain MainMain MainMain MainMainMainMain MainMainMainMainMain</main>
             <div class="div-1">
                 <p>Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 Div 1 </p>
             </div>
@@ -31,6 +33,7 @@
             <div class="div-3">
                 <p>Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 Div 3 </p>
             </div>
+            <footer>Footer</footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
